# QSAR_Forge-Qsar-ml-drug-discovery-

./: README .md  README.md
QSAR-ML-Drug-Discovery/: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  environment.yml  pyproject.toml  requirements.txt  setup.py
QSAR-ML-Drug-Discovery/data/processed/: README.md
QSAR-ML-Drug-Discovery/data/raw/: README.md
QSAR-ML-Drug-Discovery/docs/: QSAR_theory.md
QSAR-ML-Drug-Discovery/docs/model_cards/: xgboost_ache_model_card.md
QSAR-ML-Drug-Discovery/notebooks/: QSAR_ML_Models.ipynb
QSAR-ML-Drug-Discovery/results/: README.md
QSAR-ML-Drug-Discovery/src/: __init__.py
QSAR-ML-Drug-Discovery/src/data/: fetch_chembl.py  preprocess.py
QSAR-ML-Drug-Discovery/src/features/: descriptors.py  fingerprints.py
QSAR-ML-Drug-Discovery/src/models/: evaluate.py  neural_nets.py  tabnet_model.py  train.py
QSAR-ML-Drug-Discovery/src/utils/: helpers.py
QSAR-ML-Drug-Discovery/src/visualization/: eda_plots.py
QSAR-ML-Drug-Discovery/tests/: conftest.py  test_features.py  test_models.py  test_preprocess.py
