[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qsar_ml"
version = "1.0.0"
description = "QSAR modeling with 20+ ML models for computational drug discovery"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Pritam Kumar Panda", email = "your_email@example.com" },
]
keywords = [
  "QSAR", "drug discovery", "cheminformatics", "machine learning",
  "XGBoost", "LightGBM", "CatBoost", "TabNet", "RDKit", "ChEMBL"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "build", "dist", ".venv"]
